--- a/posts/Test_post/A new test post.ipynb
+++ b/posts/Test_post/A new test post.ipynb
@@ -5,6 +5,7 @@
    "id": "4582f78f-c21f-4b98-addb-5309cdd2a024",
    "metadata": {},
    "source": [
+    "---\n",
     "title: \"Florrie's Test\"\n",
     "description: \"Testing Blogging\" \n",
     "author: \"Florrie\"\n",
@@ -13,7 +14,18 @@
     "  - LLMs\n",
     "  - Learning\n",
     "  - K-12\n",
-    "  - Children"
+    "  - Children\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e4c8a61-999f-475b-8de1-7e5c6316174a",
+   "metadata": {},
+   "source": [
+    "A visualization problem for LLMs\n",
+    "Read the following and see if you can answer the question:\n",
+    "There are three boxes in a stack. A pink one, a purple one and a green one. The pink one is in the middle of the stack with the purple below it. What is the color of the box on the bottom of the stack?"
    ]
   }
  ],
