--- a/posts/Test_post/A new test post.ipynb
+++ b/posts/Test_post/A new test post.ipynb
@@ -20,12 +20,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e4c8a61-999f-475b-8de1-7e5c6316174a",
+   "id": "2e6c69be-418e-4478-929c-d8dd1bcd45df",
    "metadata": {},
    "source": [
-    "A visualization problem for LLMs\n",
-    "Read the following and see if you can answer the question:\n",
-    "There are three boxes in a stack. A pink one, a purple one and a green one. The pink one is in the middle of the stack with the purple below it. What is the color of the box on the bottom of the stack?"
+    "## A visualization problem for LLMs\n",
+    "\n",
+    "* Read the following and see if you can answer the question:\n",
+    "\n",
+    "> There are three boxes in a stack. A pink one, a purple one and a green one. The pink one is in the middle of the stack with the purple below it. What is the color of the box on the bottom of the stack?"
    ]
   }
  ],
