--- a/about.qmd
+++ b/about.qmd
@@ -5,4 +5,4 @@ about:
   template: jolla
 ---
 
-About this blog - what about it?
+This Blog collects some of my random thoughts on LLMs. Feel free to leave a message :)
