--- a/posts/Test_post/A new test post.ipynb
+++ b/posts/Test_post/A new test post.ipynb
@@ -6,28 +6,32 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Florrie's Test\"\n",
-    "description: \"Testing Blogging\" \n",
+    "title: \"How would your AI make suggestions that are right specifically for you?\"\n",
+    "description: \"What you might not encounter in conversations with a human\" \n",
     "author: \"Florrie\"\n",
     "date: \"9/4/2025\"\n",
+    "draft: true\n",
     "categories:\n",
-    "  - LLMs\n",
-    "  - Learning\n",
-    "  - K-12\n",
-    "  - Children\n",
+    "  - Personalization\n",
+    "  - HCI\n",
+    "  - Cognitive Sciences\n",
     "---"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2e6c69be-418e-4478-929c-d8dd1bcd45df",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2d6580f-94b2-4242-90f4-f3a3ce9de463",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## A visualization problem for LLMs\n",
+    "## My LLMs sometimes know more about me than I do\n",
     "\n",
-    "* Read the following and see if you can answer the question:\n",
+    "> It’s the beginning of another beautiful semester — and according to the syllabus of my communication course, we are required to pick a book from a list of seven on the topic of AI to read throughout the academic term.\n",
+    "    \n",
+    "> Usually, I would let my large language model introduce each book to me to get a snapshot and then make a judgment myself. This time, I decided to take it a step further and treat the interaction as a small communicative experiment. I would ask the LLM to act as a consultant and actively suggest the best options for me.\n",
     "\n",
-    "> There are three boxes in a stack. A pink one, a purple one and a green one. The pink one is in the middle of the stack with the purple below it. What is the color of the box on the bottom of the stack?"
+    "> This should be a reasonable task for an LLM: I've been using this particular model mainly for school and work since 2023, so our interaction history forms a rich corpus of my academic and intellectual interests. In theory, it should be able to generate tailored suggestions. However,I decided to make my intention clear in the prompt:\n"
    ]
   }
  ],
