--- a/about.qmd
+++ b/about.qmd
@@ -2,7 +2,7 @@
 title: About
 image: self.JPG
 about:
-  template: jolla
+  template: trestles
 ---
 
 This Blog collects some of my random thoughts on LLMs. Feel free to leave a message :)
