--- a/posts/Test_post/A new test post.ipynb
+++ b/posts/Test_post/A new test post.ipynb
@@ -31,7 +31,7 @@
     "    \n",
     "> Usually, I would let my large language model introduce each book to me to get a snapshot and then make a judgment myself. This time, I decided to take it a step further and treat the interaction as a small communicative experiment. I would ask the LLM to act as a consultant and actively suggest the best options for me.\n",
     "\n",
-    "> This should be a reasonable task for an LLM: I've been using this particular model mainly for school and work since 2023, so our interaction history forms a rich corpus of my academic and intellectual interests. In theory, it should be able to generate tailored suggestions. However,I decided to make my intention clear in the prompt:\n"
+    "> This should be a reasonable task for an LLM: I've been using this particular model mainly for school and work since 2023, so our interaction history forms a **rich data** of my academic and intellectual interests. Therefore, it should be able to generate tailored suggestions. However,I decided to make my intention clear in the ask:\n"
    ]
   }
  ],
