--- a/posts/Blog1-book recommendation/A_new_post.ipynb
+++ b/posts/Blog1-book recommendation/A_new_post.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "Interestingly, this final point highlights a key difference between human and AI communication. It's difficult to imagine a human expert spontaneously generating such a detailed list of potential operational connections of each book with my past experience in a casual conversation. The tips for class would also be cognitively exausive to provide. While the __cognitive load__ requried for these content would be too high for a human talker, they are easy-peasy for a LLM. \n",
     "\n",
-    "So, although the tones and expressions look humane, its very ability to perform this low-cost, high-output analysis is actually inhuman, or unatural. It doesn't rely on the same mental shortcuts as human do. To him, generating these chunks of tasks have no different from the other chunks, computationally. \n"
+    "So, although the tones and expressions look humane, GPT's very ability to perform this __low-cost, high-output analysis in a causal converstion__ is actually inhuman, or unatural. It doesn't rely on the same __mental shortcuts__ as human do. To him, generating these chunks of tasks have no different from the other chunks, computationally. \n"
    ]
   }
  ],
