--- a/posts/Blog1-book recommendation/A_new_post.ipynb
+++ b/posts/Blog1-book recommendation/A_new_post.ipynb
@@ -36,7 +36,7 @@
    "id": "99c02ad2-beb3-43e2-9dc8-3deb46e9c0a7",
    "metadata": {},
    "source": [
-    "![Image](LLM1.png)"
+    "> ![Image](LLM1.png)"
    ]
   },
   {
@@ -49,20 +49,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee3ad8f-c5d1-4b97-aa71-442ada38021a",
+   "id": "fd45d33f-1e02-47ee-b2a1-402365e69449",
    "metadata": {},
    "source": [
     "After 42 seconds, the model returned a long response structured in a very deliberate way:\n",
-    "  * An opening comment on the assignment. \n",
-    "  * His top 3 picks with rationales."
+    " * An opening comment on the assignment. \n",
+    " * His top 3 picks with rationales."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c7b22264-929f-4c23-80fe-191da89593cd",
+   "id": "f8dc01b0-2fc6-40bf-a53c-ed91cfaa1b74",
    "metadata": {},
    "source": [
-    "![Image](LLM2.png)"
+    "---\n",
+    "> ![Image](LLM2.png)"
    ]
   },
   {
@@ -76,10 +77,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd74d27c-e4ec-4f66-8038-346f178549b6",
+   "id": "327f44f2-e39f-4875-a335-900a5421847a",
    "metadata": {},
    "source": [
-    "![Image](LLM3.png)"
+    "---\n",
+    "> ![Image](LLM3.png)"
    ]
   },
   {
@@ -96,7 +98,8 @@
    "id": "0fb413b5-40d3-4a18-a0e0-551eb88ef5f2",
    "metadata": {},
    "source": [
-    "![Image](LLM4.png)"
+    "---\n",
+    "> ![Image](LLM4.png)"
    ]
   },
   {
@@ -121,6 +124,7 @@
    "metadata": {},
    "source": [
     "But here are the __things I truly appreciated__:\n",
+    "\n",
     "1. *It provided a ready-to-use ranked list. The LLM correctly parsed the prompt's explicit instructions (\"rank your preferences\") and structured its primary output to meet that specific need.*\n",
     "   \n",
     "2. *It provided rationales connecting to my past work, which allowed me to critically evaluate the rationales and re-weigh my current prioritization.*\n",
