--- a/posts/Blog2 - Being polite/Being polite.ipynb
+++ b/posts/Blog2 - Being polite/Being polite.ipynb
@@ -142,9 +142,9 @@
    "id": "cee2b1a1-9bdf-4587-8b5c-1d2098d1c4fc",
    "metadata": {},
    "source": [
-    "## A Psychology, or HCI perspective\n",
+    "## A Psychology, or HCI perspective, or a business perspective\n",
     "\n",
-    "So, why bother being polite? A few months ago, [Sam Altman] replied on X to a question about this very issue, saying the electricity cost was, \"Tens of millions of dollars well spent — you never know.\" Perhaps the real benefit isn't in the raw output but in shaping the communicative norms around AI. A courteous interaction can lead to a smoother user experience and a healthier human-AI culture. I did find the polite exchange more comfortable and was more willing to continue the conversation. For tech companies, this enhanced HCI experience is certainly a product-win, making it worth a marginal energy cost. "
+    "So, why bother being polite? A few months ago, [Sam Altman](https://wccftech.com/saying-thank-you-and-being-polite-to-chatgpt-is-costing-tens-of-millions-but-sam-altman-says-its-money-well-spent/) replied on X to a question about this very issue, saying the electricity cost was, *\"Tens of millions of dollars well spent — you never know.\"* Perhaps the real benefit isn't in the raw output but in shaping the __communicative norms__ around AI. A courteous interaction can lead to a __smoother user experience and a healthier human-AI culture__. I did find the polite exchange more comfortable and was more willing to continue the conversation. For tech companies, this enhanced HCI experience is certainly a __product-win__, making it worth a marginal energy cost. "
    ]
   }
  ],
