--- a/posts/Blog1-book recommendation/A_new_post.ipynb
+++ b/posts/Blog1-book recommendation/A_new_post.ipynb
@@ -63,7 +63,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "> ![Image](LLM2.png)"
+    "> ![Image](LLM2.png)\n",
+    "---"
    ]
   },
   {
@@ -81,7 +82,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "> ![Image](LLM3.png)"
+    "> ![Image](LLM3.png)\n",
+    "---"
    ]
   },
   {
@@ -99,7 +101,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "> ![Image](LLM4.png)"
+    "> ![Image](LLM4.png)\n",
+    "---"
    ]
   },
   {
