--- a/posts/Blog1-book recommendation/A_new_post.ipynb
+++ b/posts/Blog1-book recommendation/A_new_post.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "4582f78f-c21f-4b98-addb-5309cdd2a024",
+   "id": "41b99438-77da-4cdb-99d6-a8e9b9acf920",
    "metadata": {},
    "source": [
     "---\n",
     "title: \"How would your AI make suggestions that are right specifically for you?\"\n",
-    "description: \"What you might not encounter in conversations with a human\" \n",
+    "description: \"What you might not encounter in conversations with a human\"\n",
     "author: \"Florrie\"\n",
-    "date: \"9/4/2025\"\n",
+    "date: \"2025-09-04\"\n",
     "categories:\n",
     "  - Personalization\n",
     "  - HCI\n",
