--- a/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
+++ b/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
@@ -50,7 +50,7 @@
     "> 1. __The Training Assumption__: Believing human-like learning methods are optimal for models.\n",
     "> * Limitation: Forcing a model to reason in step-by-step language (Chain-of-Thought) might be less effective than allowing it to reason in its own abstract \"latent space\".\n",
     "> * Alternative: Use byte-level tokenization (processing raw computer data) and explore reasoning methods that operate beyond the constraints of human language\n",
-    "\n"
+    "***"
    ]
   },
   {
@@ -58,9 +58,51 @@
    "id": "8a2cb152-eadd-4df3-816f-1029073b4901",
    "metadata": {},
    "source": [
-    "> 1. __The Training Assumption__: Believing human-like learning methods are optimal for models.\n",
-    "> * Limitation: Forcing a model to reason in step-by-step language (Chain-of-Thought) might be less effective than allowing it to reason in its own abstract \"latent space\".\n",
-    "> * Alternative: Use byte-level tokenization (processing raw computer data) and explore reasoning methods that operate beyond the constraints of human language"
+    "> 2. __The Alignment Assumption__: Thinking models must reason about human values o be safe and helpful.\n",
+    "> * Limitation: Teaching models human values can lead to surface-level mimicry, misleading users into over-trusting or forming emotional attachments to systems that don’t actually understand values.\n",
+    "> * Alternative: Use control systems theory to treat alignment as an engineering problem of keeping a system's output within specified bounds, rather than a moral one.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6519917c-e7ef-49d2-ae44-fbfa2cfeda3d",
+   "metadata": {},
+   "source": [
+    "> 3. __The Evaluation Assumption__: Assuming model capabilities should be measured with human-like tests.\n",
+    "> * Limitation: Human benchmarks (like standardized tests) can be misleading and often fail to capture the unique ways AIs fail. Models can get good at passing these tests without real improvement in general capabilities.\n",
+    "> * Alternative: Design dynamic benchmarks and tests specifically tailored to AI failure modes, such as sensitivities to the probabilities in their training data.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5beaf0c-8299-47dc-bf98-24b5d841318f",
+   "metadata": {},
+   "source": [
+    "> 3. __The Behaviore Assumption__: Attributing human-like intentions to a model’s behavior.\n",
+    "> * Limitation: Labeling a model's output as \"deceptive\" or \"sycophantic\" incorrectly assigns a human illocutionary act (the speaker's intent) to a system that has none. This can lead to flawed interventions that try to address the \"motive\" rather than the underlying technical cause.\n",
+    "> * Alternative: Reframe these behaviors as \"role-play\" or sophisticated simulation, where the model is simply reproducing linguistic patterns without any genuine internal state.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c652ce4-5330-4f95-904f-ae192791f4c6",
+   "metadata": {},
+   "source": [
+    "> 3. __The User Interaction Assumption__: That interacting with an LLM should mirror human-to-human conversation.\n",
+    "> * Limitation: The standard chat interface encourages conversational habits that are often ineffective for getting high-quality outputs.This creates a \"gulf of envisioning,\" where users struggle to formulate prompts that leverage the system's actual capabilities.\n",
+    "> * Alternative: Develop structured interaction frameworks and interfaces that more explicitly guide users and expose the system's true functionality, rather than masking it behind a conversational layer.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0343447-89ca-4c6d-9cac-d7bd70119d87",
+   "metadata": {},
+   "source": [
+    "It’s ironic that we just discussed how using polite, courteous language with LLMs might enhance performance or at least the user experience. This paper suggests that, for optimal technical performance, we might not use natural language to communicate with LLMs at all. This raises a fascinating question: Do we only need LLMs for instrumental tasks—to just get work done? Or is there also a need for phatic communication, the kind of social interaction that builds emotional bonds? This is especially important when considering diverse users, such as children, who may not have a sense of how the models function at all, leaving a potential for over-trust.\n"
    ]
   }
  ],
