--- a/posts/Blog1-book recommendation/A_new_post.ipynb
+++ b/posts/Blog1-book recommendation/A_new_post.ipynb
@@ -18,6 +18,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44e9fca7-143d-421d-b30b-5c71b83623c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "![Image](Personalization.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2e953c4b-90da-4660-be47-75e4ce4619e4",
    "metadata": {},
