--- a/posts/Blog2-Being polite/Being polite.ipynb
+++ b/posts/Blog2-Being polite/Being polite.ipynb
@@ -21,7 +21,7 @@
    "id": "9b106ac3-3d77-42e8-bb3d-8cdb27e4bccf",
    "metadata": {},
    "source": [
-    "                          ![Image](Polite.png)"
+    "![Image](Polite.png)"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "id": "63008279-1df8-4f2b-80b6-1efbc6e9f6e0",
    "metadata": {},
    "source": [
-    "However, the results weren't consistent across different models. GPT 4-o returned nearly identical content for both prompts, just with a friendlier tone in response to the polite query. Meanwhile, Claude 3.5 sonnet does not seem to care at all: It gave out essentially the same content and expressions. "
+    "However, the results weren't consistent across different models. GPT 4-o returned __nearly identical content__ for both prompts, just with a friendlier tone in response to the polite query. Meanwhile, Claude 3.5 sonnet __does not seem to care__ at all: It gave out essentially the same content and expressions. "
    ]
   },
   {
@@ -133,7 +133,7 @@
    "source": [
     "## Conclusion from this mini-experiment\n",
     "\n",
-    "My conclusion is that while some models may perform slightly better with polite prompts, the improvement is often marginal. A not-validated assumption might be that the linguistic patterns of polite inquiries, which often include more detailed framing (\"...for me?\"), are simply correlated in its training data with more structured, helpful, and detailed human-written examples. The politeness itself may be a confounding variable. AI is not feeling anything and respond under its emotions. It’s still the computational magic. "
+    "My conclusion is that while some models may perform slightly better with polite prompts, __the improvement is often marginal__. A not-validated assumption might be that the linguistic patterns of polite inquiries, which often include more detailed framing (\"...for me?\"), are simply correlated in its training data with more structured, helpful, and detailed human-written examples. The politeness itself may be a __confounding variable__. AI is not feeling anything and respond under its emotions. It’s still the computational magic. "
    ]
   },
   {
