--- a/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
+++ b/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
@@ -21,7 +21,7 @@
    "id": "a3c76905-74ca-4045-b835-274a41f8db41",
    "metadata": {},
    "source": [
-    "                                 ![Image](cat.png)"
+    "![Image](cat.png)"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "4ebbd1f6-7b07-4d36-b4a1-9a07eda3b79d",
    "metadata": {},
    "source": [
-    "Have you heard the analogy that the human brain is like a computer? This **conceptual metaphor** is powerful and has shaped our understanding of cognition for decades. Now, with the rise of \"neural nets\" and human-like conversations from LLMs, it feels more real than ever. However, it's crucial to remember it's just a comparison. While neural networks were inspired by the brain's structure, their underlying mechanisms are fundamentally different. We tend to anthropomorphize LLMs by projecting human qualities onto them, and a recent paper argues that this tendency is __detrimental__ to AI research and development.\n"
+    "Have you heard the analogy that the human brain is like a computer? This **conceptual metaphor** is powerful and has shaped our understanding of cognition for decades. Now, with the rise of \"neural nets\" and human-like conversations from LLMs, it feels more real than ever. However, it's crucial to remember **it's just a comparison**. While neural networks were inspired by the brain's structure, their underlying mechanisms are fundamentally different. We tend to anthropomorphize LLMs by projecting human qualities onto them, and a recent paper argues that this tendency is __detrimental__ to AI research and development.\n"
    ]
   },
   {
@@ -102,7 +102,10 @@
    "id": "d0343447-89ca-4c6d-9cac-d7bd70119d87",
    "metadata": {},
    "source": [
-    "It’s ironic that we just discussed how using polite, courteous language with LLMs might enhance performance or at least the user experience. This paper suggests that, for optimal technical performance, we might not use natural language to communicate with LLMs at all. This raises a fascinating question: Do we only need LLMs for instrumental tasks—to just get work done? Or is there also a need for phatic communication, the kind of social interaction that builds emotional bonds? This is especially important when considering diverse users, such as children, who may not have a sense of how the models function at all, leaving a potential for over-trust.\n"
+    "## How does the user experience fit in?\n",
+    "It’s ironic that we just discussed how using polite, courteous language with LLMs might enhance performance or at least the user experience. This paper suggests that, for optimal technical performance, we might not use natural language to communicate with LLMs at all. This raises a fascinating question: **Do we only need LLMs for instrumental tasks—to just get work done? Or is there also a need for phatic communication, the kind of social interaction that builds emotional bonds?** This is especially important when considering diverse users, such as children, who may not have a sense of how the models function at all, leaving a potential for over-trust.\n",
+    "\n",
+    "Perhaps the solution is a two-tiered approach. On a technical level, we should de-anthropomorphize AI to build more competent and reliable systems. The \"human touch\" can then be thoughtfully applied at the **interface level** through careful UX design, allowing us to consciously and ethically **choose when and how** to provide that sense of social support.\n"
    ]
   }
  ],
