--- a/posts/Blog1-book recommendation/A_new_post.ipynb
+++ b/posts/Blog1-book recommendation/A_new_post.ipynb
@@ -128,6 +128,7 @@
    "id": "97ff66e0-cbb3-40ce-bb80-7f086fc8a11f",
    "metadata": {},
    "source": [
+    "## Is unnecessarily long for a natural human interaction\n",
     "While I found the response useful, it was excessively lengthy, especially considering the computational energy LLMs consume. I often have the sense that they favor __exhaustiveness__ over the brevity we often value in human conversation, because talking is energy-consuming.\n"
    ]
   },
@@ -136,7 +137,7 @@
    "id": "b67050ba-4d16-4b8e-aea8-55bc31699a63",
    "metadata": {},
    "source": [
-    "But here are the __things I truly appreciated__:\n",
+    "## But here are the __things I truly appreciated__:\n",
     "\n",
     "1. *It provided a ready-to-use ranked list. The LLM correctly parsed the prompt's explicit instructions (\"rank your preferences\") and structured its primary output to meet that specific need.*\n",
     "   \n",
@@ -153,6 +154,7 @@
    "source": [
     "Interestingly, this final point highlights a key difference between human and AI communication. It's difficult to imagine a human expert spontaneously generating such a detailed list of potential operational connections of each book with my past experience in a casual conversation. The tips for class would also be cognitively exausive to provide. While the __cognitive load__ requried for these content would be too high for a human talker, they are easy-peasy for a LLM. \n",
     "\n",
+    "## Different mental manipulations make LLMs seem \n",
     "So, although the tones and expressions look humane, GPT's very ability to perform this __low-cost, high-output analysis in a causal converstion__ is actually inhuman, or unatural. It doesn't rely on the same __mental shortcuts__ as human do. To him, generating these chunks of tasks have no different from the other chunks, computationally. \n"
    ]
   }
