--- a/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
+++ b/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
@@ -29,6 +29,7 @@
    "id": "4ebbd1f6-7b07-4d36-b4a1-9a07eda3b79d",
    "metadata": {},
    "source": [
+    "## The famous analogy...\n",
     "Have you heard the analogy that the human brain is like a computer? This **conceptual metaphor** is powerful and has shaped our understanding of cognition for decades. Now, with the rise of \"neural nets\" and human-like conversations from LLMs, it feels more real than ever. However, it's crucial to remember **it's just a comparison**. While neural networks were inspired by the brain's structure, their underlying mechanisms are fundamentally different. We tend to anthropomorphize LLMs by projecting human qualities onto them, and a recent paper argues that this tendency is __detrimental__ to AI research and development.\n"
    ]
   },
@@ -50,7 +51,7 @@
     "> 1. __The Training Assumption__: Believing human-like learning methods are optimal for models.\n",
     "> * Limitation: Forcing a model to reason in step-by-step language (Chain-of-Thought) might be less effective than allowing it to reason in its own abstract \"latent space\".\n",
     "> * Alternative: Use byte-level tokenization (processing raw computer data) and explore reasoning methods that operate beyond the constraints of human language\n",
-    "***"
+    "> ***"
    ]
   },
   {
@@ -61,7 +62,7 @@
     "> 2. __The Alignment Assumption__: Thinking models must reason about human values o be safe and helpful.\n",
     "> * Limitation: Teaching models human values can lead to surface-level mimicry, misleading users into over-trusting or forming emotional attachments to systems that don’t actually understand values.\n",
     "> * Alternative: Use control systems theory to treat alignment as an engineering problem of keeping a system's output within specified bounds, rather than a moral one.\n",
-    "***"
+    "> ***"
    ]
   },
   {
@@ -72,7 +73,7 @@
     "> 3. __The Evaluation Assumption__: Assuming model capabilities should be measured with human-like tests.\n",
     "> * Limitation: Human benchmarks (like standardized tests) can be misleading and often fail to capture the unique ways AIs fail. Models can get good at passing these tests without real improvement in general capabilities.\n",
     "> * Alternative: Design dynamic benchmarks and tests specifically tailored to AI failure modes, such as sensitivities to the probabilities in their training data.\n",
-    "***"
+    "> ***"
    ]
   },
   {
@@ -80,10 +81,10 @@
    "id": "b5beaf0c-8299-47dc-bf98-24b5d841318f",
    "metadata": {},
    "source": [
-    "> 3. __The Behaviore Assumption__: Attributing human-like intentions to a model’s behavior.\n",
+    "> 4. __The Behaviore Assumption__: Attributing human-like intentions to a model’s behavior.\n",
     "> * Limitation: Labeling a model's output as \"deceptive\" or \"sycophantic\" incorrectly assigns a human illocutionary act (the speaker's intent) to a system that has none. This can lead to flawed interventions that try to address the \"motive\" rather than the underlying technical cause.\n",
     "> * Alternative: Reframe these behaviors as \"role-play\" or sophisticated simulation, where the model is simply reproducing linguistic patterns without any genuine internal state.\n",
-    "***"
+    "> ***"
    ]
   },
   {
@@ -91,7 +92,7 @@
    "id": "0c652ce4-5330-4f95-904f-ae192791f4c6",
    "metadata": {},
    "source": [
-    "> 3. __The User Interaction Assumption__: That interacting with an LLM should mirror human-to-human conversation.\n",
+    "> 5. __The User Interaction Assumption__: That interacting with an LLM should mirror human-to-human conversation.\n",
     "> * Limitation: The standard chat interface encourages conversational habits that are often ineffective for getting high-quality outputs.This creates a \"gulf of envisioning,\" where users struggle to formulate prompts that leverage the system's actual capabilities.\n",
     "> * Alternative: Develop structured interaction frameworks and interfaces that more explicitly guide users and expose the system's true functionality, rather than masking it behind a conversational layer.\n",
     "***"
