--- a/posts/Blog2-Being polite/Being polite.ipynb
+++ b/posts/Blog2-Being polite/Being polite.ipynb
@@ -47,6 +47,8 @@
    "id": "210ef5b9-9bb8-46a9-a739-0ac319738ad2",
    "metadata": {},
    "source": [
+    "## An experiment\n",
+    "\n",
     "While designers at Microsoft Copilot suggest polite prompts elicit more cooperative responses, is true in life across models and types of questions? I ran a small experiment using two distinct prompts to see if the answers really differ: a direct deman and an indirect inquiry."
    ]
   },
