--- a/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
+++ b/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
@@ -84,10 +84,11 @@
     "> 4. __The Behaviore Assumption__: Attributing human-like intentions to a model’s behavior.\n",
     "> * Limitation: Labeling a model's output as \"deceptive\" or \"sycophantic\" incorrectly assigns a human illocutionary act (the speaker's intent) to a system that has none. This can lead to flawed interventions that try to address the \"motive\" rather than the underlying technical cause.\n",
     "> * Alternative: Reframe these behaviors as \"role-play\" or sophisticated simulation, where the model is simply reproducing linguistic patterns without any genuine internal state.\n",
-    "> ***"
+    "***"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c652ce4-5330-4f95-904f-ae192791f4c6",
    "metadata": {},
