--- a/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
+++ b/posts/Blog3-Anthormorphism/Anthropomorphism.ipynb
@@ -52,7 +52,7 @@
     "> 1. __The Training Assumption__: Believing human-like learning methods are optimal for models.\n",
     "> * Limitation: Forcing a model to reason in step-by-step language (Chain-of-Thought) might be less effective than allowing it to reason in its own abstract \"latent space\".\n",
     "> * Alternative: Use byte-level tokenization (processing raw computer data) and explore reasoning methods that operate beyond the constraints of human language\n",
-    "> ***"
+    "> * **"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "> 2. __The Alignment Assumption__: Thinking models must reason about human values o be safe and helpful.\n",
     "> * Limitation: Teaching models human values can lead to surface-level mimicry, misleading users into over-trusting or forming emotional attachments to systems that don’t actually understand values.\n",
     "> * Alternative: Use control systems theory to treat alignment as an engineering problem of keeping a system's output within specified bounds, rather than a moral one.\n",
-    "> ***"
+    "> * **"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "> 4. __The Behaviore Assumption__: Attributing human-like intentions to a model’s behavior.\n",
     "> * Limitation: Labeling a model's output as \"deceptive\" or \"sycophantic\" incorrectly assigns a human illocutionary act (the speaker's intent) to a system that has none. This can lead to flawed interventions that try to address the \"motive\" rather than the underlying technical cause.\n",
     "> * Alternative: Reframe these behaviors as \"role-play\" or sophisticated simulation, where the model is simply reproducing linguistic patterns without any genuine internal state.\n",
-    "***"
+    "![Image](Lying_AI.png)"
    ]
   },
   {
