--- a/posts/Blog1-book recommendation/A_new_post.ipynb
+++ b/posts/Blog1-book recommendation/A_new_post.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Personalized and excessively long suggestions from LLMs\"\n",
+    "title: \"Personalized but excessively long suggestions from LLMs\"\n",
     "description: \"What you might not encounter in conversations with a human\"\n",
     "author: \"Florrie\"\n",
     "date: \"2025-09-04\"\n",
